fixed bug with github & linkedin icons staying hover color while on mobile phone

--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ footer {
 #stck-ovrflw:hover, button:hover {
   background-color: var(--beet-color1);
   fill: #FFFFFF;
-} */
+}
 
 #git-hub-img:hover > svg *,
 #git-hub-img:hover, button:hover {
@@ -285,10 +285,10 @@ footer {
 #linked-in-img:hover, button:hover {
   background-color: var(--beet-color1);
   fill: #FFFFFF;
-}
+} */
 
 @media (hover: hover) and (pointer: fine) {
-  #stck-ovrflw:hover {
+  #stck-ovrflw:hover, #git-hub-img:hover, #linked-in-img:hover {
     background-color: var(--beet-color1);
   }
 }
